Added Images and Styled it

--- a/animals.html
+++ b/animals.html
@@ -40,6 +40,19 @@
 <p>The row with animal names breaks into horizontal first.</p>
 <p>Because the grid systems of letters and animals are col-sm-2 Small (>=576px) and col-md Medium (>=768px), the row with animal names breaks first. Because the letter class's grid structure is so small, they stay horizontal, whereas the animal elements switch to vertical when the screen size falls below 768px.</p>
 
+<div>
+    <img src="Alusky.jpg"  class="img-fluid" alt="Alusky">
+    <img src="Dalmador.jpg"  class="img-fluid" alt="Dalmador"> 
+    <img src="Nigerian Goat.jpg"  class="img-fluid" alt="Nigerian Goat"> 
+</div>
+<br>
+<div>
+    <img src="Alusky.jpg"  class="img-thumbnail" alt="Alusky">
+    <img src="Dalmador.jpg"  class="img-thumbnail" alt="Dalmador"> 
+    <img src="Nigerian Goat.jpg"  class="img-thumbnail" alt="Nigerian Goat">
+</div>
+<br>
+
 </body>
 </html>
 
