Added Table and styled it

--- a/animals.html
+++ b/animals.html
@@ -53,6 +53,60 @@
 </div>
 <br>
 
+<table class="table">
+<thead>
+  <tr class="table-dark border border-dark">
+    <th scope="col">Letter</th>
+    <th scope="col">Animal</th>
+    <th scope="col">City</th>
+    <th scope="col">Car</th>
+  </tr>
+</thead>
+<tbody>
+  <tr class="table-primary border border-primary">
+    <th scope="row">B</th>
+    <td>Babirusa</td>
+    <td>Bangalore</td>
+    <td>Benz</td>
+  </tr>
+  <tr class="table-secondary border border-secondary">
+    <th scope="row">A</th>
+    <td>Aardvark</td>
+    <td>Ahmedabad</td>
+    <td>Audi</td>
+  </tr>
+  <tr class="table-success border border-success">
+    <th scope="row">N</th>
+    <td>Nigerian Goat</td>
+    <td>Nasik</td>
+    <td>Nexo</td>
+  </tr>
+  <tr class="table-danger border border-danger">
+    <th scope="row">D</th>
+    <td>Dalmador</td>
+    <td>Dehradun</td>
+    <td>Dauphine</td>
+  </tr>
+  <tr class="table-info border border-info">
+    <th scope="row">H</th>
+    <td>Hagfish</td>
+    <td>Hyderabad</td>
+    <td>Hummer</td>
+  </tr>
+  <tr class="table-warning border border-warning">
+    <th scope="row">A</th>
+    <td>Alusky</td>
+    <td>Amritsar</td>
+    <td>Aurus</td>
+  </tr>
+</tbody>
+
+
+
+
+
+
+</table>
 </body>
 </html>
 
