--- a/animals.html
+++ b/animals.html
@@ -54,6 +54,7 @@
 <br>
 
 <table class="table">
+  <caption>Table showing the animal city and car models</caption>
   <thead>
     <tr class="table-dark border border-dark">
       <th scope="col">Letter</th>
@@ -101,7 +102,19 @@
     </tr>
   </tbody>
   </table>
-  
+  <div class="btn-toolbar" role="group" aria-label="Toolbar button groups">
+  <div class="btn-group btn-group me-2" role="group" aria-label="First group">
+    <button type="button" class="btn btn-success" >A</button>
+    <button type="button" class="btn btn-success" >D</button>
+    <button type="button" class="btn btn-success" >N</button>
+  </div>
+  <div class="btn-group btn-group me-2" role="group" aria-label="Second group">
+    <button type="button" class="btn btn-warning" >B</button>
+    <button type="button" class="btn btn-warning" >H</button>
+  </div>
+  <div 
+  <div class="btn-group btn-group" role="group" aria-label="Third group">
+    <button type="button" class="btn btn-danger" >A</button>
 
 
 
