--- a/animals.html
+++ b/animals.html
@@ -47,16 +47,16 @@
 </div>
 <br>
 <div>
-    <img src="Alusky.jpg"  class="img-thumbnail" alt="Alusky">
-    <img src="Dalmador.jpg"  class="img-thumbnail" alt="Dalmador"> 
-    <img src="Nigerian Goat.jpg"  class="img-thumbnail" alt="Nigerian Goat">
+    <img src="Alusky.jpg"  class="img-thumbnail" alt="Alusky" height="200px" width="200px">
+    <img src="Dalmador.jpg"  class="img-thumbnail" alt="Dalmador" height="200px" width="200px"> 
+    <img src="Nigerian Goat.jpg"  class="img-thumbnail" alt="Nigerian Goat" height="200px" width="200px">
 </div>
 <br>
 
-<table class="table">
+  <table class="table table table-striped table-hover table-bordered border-primary table-responsive">
   <caption>Table showing the animal city and car models</caption>
   <thead>
-    <tr class="table-dark border border-dark">
+    <tr class="table-dark">
       <th scope="col">Letter</th>
       <th scope="col">Animal</th>
       <th scope="col">City</th>
@@ -64,37 +64,37 @@
     </tr>
   </thead>
   <tbody>
-    <tr class="table-primary border border-primary">
+    <tr class="table-primary">
       <th scope="row">B</th>
       <td>Babirusa</td>
       <td>Bangalore</td>
       <td>Benz</td>
     </tr>
-    <tr class="table-secondary border border-secondary">
+    <tr class="table-secondary">
       <th scope="row">A</th>
       <td>Aardvark</td>
       <td>Ahmedabad</td>
       <td>Audi</td>
     </tr>
-    <tr class="table-success border border-success">
+    <tr class="table-success">
       <th scope="row">N</th>
       <td>Nigerian Goat</td>
       <td>Nasik</td>
       <td>Nexo</td>
     </tr>
-    <tr class="table-danger border border-danger">
+    <tr class="table-danger">
       <th scope="row">D</th>
       <td>Dalmador</td>
       <td>Dehradun</td>
       <td>Dauphine</td>
     </tr>
-    <tr class="table-info border border-info">
+    <tr class="table-info">
       <th scope="row">H</th>
       <td>Hagfish</td>
       <td>Hyderabad</td>
       <td>Hummer</td>
     </tr>
-    <tr class="table-warning border border-warning">
+    <tr class="table-warning">
       <th scope="row">A</th>
       <td>Alusky</td>
       <td>Amritsar</td>
@@ -102,22 +102,31 @@
     </tr>
   </tbody>
   </table>
-  <div class="btn-toolbar" role="group" aria-label="Toolbar button groups">
-  <div class="btn-group btn-group me-2" role="group" aria-label="First group">
-    <button type="button" class="btn btn-success" >A</button>
-    <button type="button" class="btn btn-success" >D</button>
-    <button type="button" class="btn btn-success" >N</button>
+
+  <div class="button" aria-label="six button group">
+    <button type="button" class="btn btn-outline-primary">B</button>
+    <button type="button" class="btn btn-outline-primary">A</button>
+    <button type="button" class="btn btn-outline-primary">N</button>
+    <button type="button" class="btn btn-outline-primary">D</button>
+    <button type="button" class="btn btn-outline-primary">H</button>
+    <button type="button" class="btn btn-outline-primary">A</button>
   </div>
-  <div class="btn-group btn-group me-2" role="group" aria-label="Second group">
-    <button type="button" class="btn btn-warning" >B</button>
-    <button type="button" class="btn btn-warning" >H</button>
+  <div class="btn-toolbar" role="toolbar" aria-label="Button Groups">
+    <nav class="navbar navbar-inverse">
+    <div class="btn-group" role="group" aria-label="Success group">
+      <button type="button" class="btn btn-success">A</button>
+      <button type="button" class="btn btn-success">D</button>
+      <button type="button" class="btn btn-success">N</button>    
+    </div>
+    <div class="btn-group" role="group" aria-label="alert group">
+      <button type="button" class="btn btn-warning">B</button>
+      <button type="button" class="btn btn-warning">H</button>
+    </div>
+    <div class="btn-group" role="group" aria-label="danger group">
+      <button type="button" class="btn btn-danger">A</button>
+    </div>
   </div>
-  <div 
-  <div class="btn-group btn-group" role="group" aria-label="Third group">
-    <button type="button" class="btn btn-danger" >A</button>
-
-
-
+  
 
 </body>
 </html>
