--- a/animals.html
+++ b/animals.html
@@ -12,9 +12,25 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
+
 </head>
-<body>
-<h1>Animals by Manish goud Bandharapu</h1>
+
+<body style="margin-left: 30px; margin-right:30px">
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand" href="animals.html">Interesting Animals</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+       <li class="nav-item"> <a class="nav-link active " href="plane.html">Plane</a></li>
+      <li class="nav-item"><a class="nav-link active" href="train.html">Train</a></li>
+      </ul>
+    </div>
+  </nav>
+  <br>
+  <h1>Animals by Manish goud Bandharapu</h1>
+
 <p>Picked out letters from my last name - B,A,N,D,H and A.</p>
 <div class="container">
     <div class="row">
@@ -103,30 +119,66 @@
   </tbody>
   </table>
 
-  <div class="button" aria-label="six button group">
+  <div>
     <button type="button" class="btn btn-outline-primary">B</button>
-    <button type="button" class="btn btn-outline-primary">A</button>
-    <button type="button" class="btn btn-outline-primary">N</button>
-    <button type="button" class="btn btn-outline-primary">D</button>
-    <button type="button" class="btn btn-outline-primary">H</button>
-    <button type="button" class="btn btn-outline-primary">A</button>
+    <button type="button" class="btn btn-outline-success">A</button>
+    <button type="button" class="btn btn-outline-secondary">N</button>
+    <button type="button" class="btn btn-outline-danger">D</button>
+    <button type="button" class="btn btn-outline-info">H</button>
+    <button type="button" class="btn btn-outline-warning">A</button>
   </div>
-  <div class="btn-toolbar" role="toolbar" aria-label="Button Groups">
-    <nav class="navbar navbar-inverse">
-    <div class="btn-group" role="group" aria-label="Success group">
+  <br>
+  <div  class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group me-2" role="group" aria-label="Success group">
       <button type="button" class="btn btn-success">A</button>
       <button type="button" class="btn btn-success">D</button>
       <button type="button" class="btn btn-success">N</button>    
     </div>
-    <div class="btn-group" role="group" aria-label="alert group">
+    <div class="btn-group me-2" role="group" aria-label="alert group">
       <button type="button" class="btn btn-warning">B</button>
       <button type="button" class="btn btn-warning">H</button>
     </div>
-    <div class="btn-group" role="group" aria-label="danger group">
+    <div class="btn-group me-2" role="group" aria-label="danger group">
       <button type="button" class="btn btn-danger">A</button>
     </div>
   </div>
+</div>
+<br>
+
+<div class="dropdown">
+  <button type="button" class="btn btn-primary active dropdown-toggle " data-bs-toggle="dropdown" aria-expanded="true">Select</button>
+  <div class="dropdown-menu ">
+    <a class="dropdown-item "href="plane.html">Plane Page</a>
+    <a class="dropdown-item "href="train.html">Train page</a>
+  </div>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <div id="emailHelp" class="form-text">We want this to accept an email address</div>
+  </div>
   
+<div class="form-group">
+  <label for="Animal" class="form-label">Enter your Animal</label>
+  <input type="text" class="form-control" >
+</div>
+<br>
+<div class="form-check">
+  <input type="checkbox" class="form-check-input">
+    <label class="form-check-label">Sign up for newsletter? </label>
+</div>
+<br>
+<div>
+    <button type="submit" class="btn btn-primary ">Submit</button>
+  </div>
+</form>
 
 </body>
 </html>
