--- a/animals.html
+++ b/animals.html
@@ -178,8 +178,44 @@
 <div>
     <button type="submit" class="btn btn-primary ">Submit</button>
   </div>
-</form>
+  <br>
+  <br>
+  <div class="card-group">
+  <div class="card" style="width: 18rem;">
+    <img src="Alusky.jpg"  alt="Alusky">
+  <div class="card-body">
+    <h5 class="card-title">Alusky</h5>
+    <p class="card-text">The Alusky dog is the offspring of the Alaskan Malamute and Siberian Husky.
+        Both of these dogs were originally bred as sled dogs and the Alusky is known to be quite skilled at it as well, among other things. 
+        These dogs are very active and will be a great match for owners who love to bring their dogs on walks or runs. 
+        However, you should be cautious exercising them in the extreme heat, as they are more suited to colder climates.
+        Due to their high intelligence level, these dogs will be fairly easy to train and can catch on to concepts quickly.</p>
+    <a href="https://wagwalking.com/breed/alusky-alaskan-malamute-and-siberian-husky-mix" class="btn btn-primary">Link to Alusky Page</a>
+  </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="Dalmador.jpg"  alt="Dalmador Image">
+  <div class="card-body">
+    <h5 class="card-title">Dalmador</h5>
+    <p class="card-text">Dalmadors are loyal dogs that are excited to explore the world. Take your dalmador on plenty of walks; they need the exercise, and they’ll love to see what’s outside your front door.
+      They are smart and alert dogs that constantly watch their environment. These dogs are easy to train and are great for assigning tasks.
+      They are high-energy dogs that love to run and play. If you own a large property or have an active lifestyle, these dogs will get along well with you.</p>
+    <a href="https://a-z-animals.com/animals/dalmador/" class="btn btn-primary">Link to Dalmador Page</a>
+  </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="Nigerian Goat.jpg"  alt="Nigerian Goat Image">
+  <div class="card-body">
+    <h5 class="card-title">Nigerian Goat</h5>
+    <p class="card-text">The Nigerian dwarf is a miniature goat from West Africa. It has been domesticated as a dairy goat and can be found throughout the world. Goats are herbivores.
+      Goats are browsers, eating tips of woody shrubs and trees. They often improve a pasture by removing blackberry, weedy undergrowth and ivy (even poison ivy and poison oak) that other livestock won't eat.
+      A doe can produce up to two quarts per day of milk that is higher in butterfat (6 to 10 percent) and protein than milk from most dairy goat breeds.</p>
+    <a href="https://www.oregonzoo.org/discover/animals/nigerian-dwarf-goat" class="btn btn-primary">Link to Nigerian Goat Page</a>
+  </div>
+  </div>
+</div>
 
+</form>
 </body>
 </html>
 
