--- a/animals.html
+++ b/animals.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Started with bootstrap</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 
 
 </head>
@@ -18,105 +21,108 @@
 <body style="margin-left: 30px; margin-right:30px">
   <nav class="navbar navbar-expand-md navbar-light bg-light">
     <a class="navbar-brand" href="animals.html">Interesting Animals</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-       <li class="nav-item"> <a class="nav-link active " href="plane.html">Plane</a></li>
-      <li class="nav-item"><a class="nav-link active" href="train.html">Train</a></li>
+        <li class="nav-item"> <a class="nav-link active " href="plane.html">Plane</a></li>
+        <li class="nav-item"><a class="nav-link active" href="train.html">Train</a></li>
       </ul>
     </div>
   </nav>
   <br>
   <h1>Animals by Manish goud Bandharapu</h1>
 
-<p>Picked out letters from my last name - B,A,N,D,H and A.</p>
-<div class="container">
+  <p>Picked out letters from my last name - B,A,N,D,H and A.</p>
+  <div class="container">
     <div class="row">
-        <div class="col-sm-2">B</div>
-        <div class="col-sm-2">A</div>
-        <div class="col-sm-2">N</div>
-        <div class="col-sm-2">D</div>
-        <div class="col-sm-2">H</div>
-        <div class="col-sm-2">A</div>
-    </div>
-    
-    <div class="row">
-        <div class="col-md">Babirusa</div>
-        <div class="col-md">Aardvark</div>
-        <div class="col-md">Nigerian Goat</div>
-        <div class="col-md">Dalmador</div>
-        <div class="col-md">Hagfish</div>
-        <div class="col-md">Alusky</div>
+      <div class="col-sm-2">B</div>
+      <div class="col-sm-2">A</div>
+      <div class="col-sm-2">N</div>
+      <div class="col-sm-2">D</div>
+      <div class="col-sm-2">H</div>
+      <div class="col-sm-2">A</div>
     </div>
 
-</div>
+    <div class="row">
+      <div class="col-md">Babirusa</div>
+      <div class="col-md">Aardvark</div>
+      <div class="col-md">Nigerian Goat</div>
+      <div class="col-md">Dalmador</div>
+      <div class="col-md">Hagfish</div>
+      <div class="col-md">Alusky</div>
+    </div>
 
-<p>The row with animal names breaks into horizontal first.</p>
-<p>Because the grid systems of letters and animals are col-sm-2 Small (>=576px) and col-md Medium (>=768px), the row with animal names breaks first. Because the letter class's grid structure is so small, they stay horizontal, whereas the animal elements switch to vertical when the screen size falls below 768px.</p>
+  </div>
 
-<div>
-    <img src="Alusky.jpg"  class="img-fluid" alt="Alusky">
-    <img src="Dalmador.jpg"  class="img-fluid" alt="Dalmador"> 
-    <img src="Nigerian Goat.jpg"  class="img-fluid" alt="Nigerian Goat"> 
-</div>
-<br>
-<div>
-    <img src="Alusky.jpg"  class="img-thumbnail" alt="Alusky" height="200px" width="200px">
-    <img src="Dalmador.jpg"  class="img-thumbnail" alt="Dalmador" height="200px" width="200px"> 
-    <img src="Nigerian Goat.jpg"  class="img-thumbnail" alt="Nigerian Goat" height="200px" width="200px">
-</div>
-<br>
+  <p>The row with animal names breaks into horizontal first.</p>
+  <p>Because the grid systems of letters and animals are col-sm-2 Small (>=576px) and col-md Medium (>=768px), the row
+    with animal names breaks first. Because the letter class's grid structure is so small, they stay horizontal, whereas
+    the animal elements switch to vertical when the screen size falls below 768px.</p>
+
+  <div>
+    <img src="Alusky.jpg" class="img-fluid" alt="Alusky">
+    <img src="Dalmador.jpg" class="img-fluid" alt="Dalmador">
+    <img src="Nigerian Goat.jpg" class="img-fluid" alt="Nigerian Goat">
+  </div>
+  <br>
+  <div>
+    <img src="Alusky.jpg" class="img-thumbnail" alt="Alusky" height="200px" width="200px">
+    <img src="Dalmador.jpg" class="img-thumbnail" alt="Dalmador" height="200px" width="200px">
+    <img src="Nigerian Goat.jpg" class="img-thumbnail" alt="Nigerian Goat" height="200px" width="200px">
+  </div>
+  <br>
 
   <table class="table table table-striped table-hover table-bordered border-primary table-responsive">
-  <caption>Table showing the animal city and car models</caption>
-  <thead>
-    <tr class="table-dark">
-      <th scope="col">Letter</th>
-      <th scope="col">Animal</th>
-      <th scope="col">City</th>
-      <th scope="col">Car</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr class="table-primary">
-      <th scope="row">B</th>
-      <td>Babirusa</td>
-      <td>Bangalore</td>
-      <td>Benz</td>
-    </tr>
-    <tr class="table-secondary">
-      <th scope="row">A</th>
-      <td>Aardvark</td>
-      <td>Ahmedabad</td>
-      <td>Audi</td>
-    </tr>
-    <tr class="table-success">
-      <th scope="row">N</th>
-      <td>Nigerian Goat</td>
-      <td>Nasik</td>
-      <td>Nexo</td>
-    </tr>
-    <tr class="table-danger">
-      <th scope="row">D</th>
-      <td>Dalmador</td>
-      <td>Dehradun</td>
-      <td>Dauphine</td>
-    </tr>
-    <tr class="table-info">
-      <th scope="row">H</th>
-      <td>Hagfish</td>
-      <td>Hyderabad</td>
-      <td>Hummer</td>
-    </tr>
-    <tr class="table-warning">
-      <th scope="row">A</th>
-      <td>Alusky</td>
-      <td>Amritsar</td>
-      <td>Aurus</td>
-    </tr>
-  </tbody>
+    <caption>Table showing the animal city and car models</caption>
+    <thead>
+      <tr class="table-dark">
+        <th scope="col">Letter</th>
+        <th scope="col">Animal</th>
+        <th scope="col">City</th>
+        <th scope="col">Car</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="table-primary">
+        <th scope="row">B</th>
+        <td>Babirusa</td>
+        <td>Bangalore</td>
+        <td>Benz</td>
+      </tr>
+      <tr class="table-secondary">
+        <th scope="row">A</th>
+        <td>Aardvark</td>
+        <td>Ahmedabad</td>
+        <td>Audi</td>
+      </tr>
+      <tr class="table-success">
+        <th scope="row">N</th>
+        <td>Nigerian Goat</td>
+        <td>Nasik</td>
+        <td>Nexo</td>
+      </tr>
+      <tr class="table-danger">
+        <th scope="row">D</th>
+        <td>Dalmador</td>
+        <td>Dehradun</td>
+        <td>Dauphine</td>
+      </tr>
+      <tr class="table-info">
+        <th scope="row">H</th>
+        <td>Hagfish</td>
+        <td>Hyderabad</td>
+        <td>Hummer</td>
+      </tr>
+      <tr class="table-warning">
+        <th scope="row">A</th>
+        <td>Alusky</td>
+        <td>Amritsar</td>
+        <td>Aurus</td>
+      </tr>
+    </tbody>
   </table>
 
   <div>
@@ -128,11 +134,11 @@
     <button type="button" class="btn btn-outline-warning">A</button>
   </div>
   <br>
-  <div  class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-  <div class="btn-group me-2" role="group" aria-label="Success group">
+  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+    <div class="btn-group me-2" role="group" aria-label="Success group">
       <button type="button" class="btn btn-success">A</button>
       <button type="button" class="btn btn-success">D</button>
-      <button type="button" class="btn btn-success">N</button>    
+      <button type="button" class="btn btn-success">N</button>
     </div>
     <div class="btn-group me-2" role="group" aria-label="alert group">
       <button type="button" class="btn btn-warning">B</button>
@@ -142,80 +148,93 @@
       <button type="button" class="btn btn-danger">A</button>
     </div>
   </div>
-</div>
-<br>
-
-<div class="dropdown">
-  <button type="button" class="btn btn-primary active dropdown-toggle " data-bs-toggle="dropdown" aria-expanded="true">Select</button>
-  <div class="dropdown-menu ">
-    <a class="dropdown-item "href="plane.html">Plane Page</a>
-    <a class="dropdown-item "href="train.html">Train page</a>
-  </div>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-
-<form>
-  <div class="form-group">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We want this to accept an email address</div>
-  </div>
-  
-<div class="form-group">
-  <label for="Animal" class="form-label">Enter your Animal</label>
-  <input type="text" class="form-control" >
-</div>
-<br>
-<div class="form-check">
-  <input type="checkbox" class="form-check-input">
-    <label class="form-check-label">Sign up for newsletter? </label>
-</div>
-<br>
-<div>
-    <button type="submit" class="btn btn-primary ">Submit</button>
   </div>
   <br>
-  <br>
-  <div class="card-group">
-  <div class="card" style="width: 18rem;">
-    <img src="Alusky.jpg"  alt="Alusky">
-  <div class="card-body">
-    <h5 class="card-title">Alusky</h5>
-    <p class="card-text">The Alusky dog is the offspring of the Alaskan Malamute and Siberian Husky.
-        Both of these dogs were originally bred as sled dogs and the Alusky is known to be quite skilled at it as well, among other things. 
-        These dogs are very active and will be a great match for owners who love to bring their dogs on walks or runs. 
-        However, you should be cautious exercising them in the extreme heat, as they are more suited to colder climates.
-        Due to their high intelligence level, these dogs will be fairly easy to train and can catch on to concepts quickly.</p>
-    <a href="https://wagwalking.com/breed/alusky-alaskan-malamute-and-siberian-husky-mix" class="btn btn-primary">Link to Alusky Page</a>
-  </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="Dalmador.jpg"  alt="Dalmador Image">
-  <div class="card-body">
-    <h5 class="card-title">Dalmador</h5>
-    <p class="card-text">Dalmadors are loyal dogs that are excited to explore the world. Take your dalmador on plenty of walks; they need the exercise, and they’ll love to see what’s outside your front door.
-      They are smart and alert dogs that constantly watch their environment. These dogs are easy to train and are great for assigning tasks.
-      They are high-energy dogs that love to run and play. If you own a large property or have an active lifestyle, these dogs will get along well with you.</p>
-    <a href="https://a-z-animals.com/animals/dalmador/" class="btn btn-primary">Link to Dalmador Page</a>
-  </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="Nigerian Goat.jpg"  alt="Nigerian Goat Image">
-  <div class="card-body">
-    <h5 class="card-title">Nigerian Goat</h5>
-    <p class="card-text">The Nigerian dwarf is a miniature goat from West Africa. It has been domesticated as a dairy goat and can be found throughout the world. Goats are herbivores.
-      Goats are browsers, eating tips of woody shrubs and trees. They often improve a pasture by removing blackberry, weedy undergrowth and ivy (even poison ivy and poison oak) that other livestock won't eat.
-      A doe can produce up to two quarts per day of milk that is higher in butterfat (6 to 10 percent) and protein than milk from most dairy goat breeds.</p>
-    <a href="https://www.oregonzoo.org/discover/animals/nigerian-dwarf-goat" class="btn btn-primary">Link to Nigerian Goat Page</a>
-  </div>
-  </div>
-</div>
 
-</form>
+  <div class="dropdown">
+    <button type="button" class="btn btn-primary active dropdown-toggle " data-bs-toggle="dropdown"
+      aria-expanded="true">Select</button>
+    <div class="dropdown-menu ">
+      <a class="dropdown-item " href="plane.html">Plane Page</a>
+      <a class="dropdown-item " href="train.html">Train page</a>
+    </div>
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <form>
+    <div class="form-group">
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We want this to accept an email address</div>
+    </div>
+
+    <div class="form-group">
+      <label for="Animal" class="form-label">Enter your Animal</label>
+      <input type="text" class="form-control">
+    </div>
+    <br>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input">
+      <label class="form-check-label">Sign up for newsletter? </label>
+    </div>
+    <br>
+    <div>
+      <button type="submit" class="btn btn-primary ">Submit</button>
+    </div>
+    <br>
+    <br>
+    <div class="card-group">
+      <div class="card" style="width: 18rem;">
+        <img src="Alusky.jpg" alt="Alusky">
+        <div class="card-body">
+          <h5 class="card-title">Alusky</h5>
+          <p class="card-text">The Alusky dog is the offspring of the Alaskan Malamute and Siberian Husky.
+            Both of these dogs were originally bred as sled dogs and the Alusky is known to be quite skilled at it as
+            well, among other things.
+            These dogs are very active and will be a great match for owners who love to bring their dogs on walks or
+            runs.
+            However, you should be cautious exercising them in the extreme heat, as they are more suited to colder
+            climates.
+            Due to their high intelligence level, these dogs will be fairly easy to train and can catch on to concepts
+            quickly.</p>
+          <a href="https://wagwalking.com/breed/alusky-alaskan-malamute-and-siberian-husky-mix"
+            class="btn btn-primary">Link to Alusky Page</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="Dalmador.jpg" alt="Dalmador Image">
+        <div class="card-body">
+          <h5 class="card-title">Dalmador</h5>
+          <p class="card-text">Dalmadors are loyal dogs that are excited to explore the world. Take your dalmador on
+            plenty of walks; they need the exercise, and they’ll love to see what’s outside your front door.
+            They are smart and alert dogs that constantly watch their environment. These dogs are easy to train and are
+            great for assigning tasks.
+            They are high-energy dogs that love to run and play. If you own a large property or have an active
+            lifestyle, these dogs will get along well with you.</p>
+          <a href="https://a-z-animals.com/animals/dalmador/" class="btn btn-primary">Link to Dalmador Page</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="Nigerian Goat.jpg" alt="Nigerian Goat Image">
+        <div class="card-body">
+          <h5 class="card-title">Nigerian Goat</h5>
+          <p class="card-text">The Nigerian dwarf is a miniature goat from West Africa. It has been domesticated as a
+            dairy goat and can be found throughout the world. Goats are herbivores.
+            Goats are browsers, eating tips of woody shrubs and trees. They often improve a pasture by removing
+            blackberry, weedy undergrowth and ivy (even poison ivy and poison oak) that other livestock won't eat.
+            A doe can produce up to two quarts per day of milk that is higher in butterfat (6 to 10 percent) and protein
+            than milk from most dairy goat breeds.</p>
+          <a href="https://www.oregonzoo.org/discover/animals/nigerian-dwarf-goat" class="btn btn-primary">Link to
+            Nigerian Goat Page</a>
+        </div>
+      </div>
+    </div>
+
+  </form>
 </body>
-</html>
 
+</html>
