--- a/train.html
+++ b/train.html
@@ -14,7 +14,10 @@
 
 </head>
 <body>
-
+<h1>Train</h1>
+<p>
+    Bootstrap is a free and open source front end development framework for the creation of websites and web apps. ... In computers, the word bootstrap means to boot: to load a program into a computer using a much smaller initial program to load in the desired program (which is usually an operating system).
+</p>
 
 
 </body>
